Added updated_by message to schedule item

--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -101,6 +101,12 @@ td a:hover {
   font-weight: bold;
 }
 
+p#updated_by {
+  text-align: right;
+  font-size: 0.9em;
+  color: #999999;
+}
+
 p#mathjax {
 	font-size: 1em;
 	margin-top: 0.8em;
