CSS fixups, schedule item order fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
     </script>
 </head>
 <body class="<%= controller_name %> <%= action_name %>">
-<div id="wrapper">
+<div id="wrapper" class="fluid-container">
 
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
