--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,7 @@
     </script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({
-          tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']],
-              processEscapes: true
-              }
+          TeX: { equationNumbers: { autoNumber: "AMS" } }
         });
     </script>
 </head>
