--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -8,13 +8,13 @@
         <%= link_to '<i class="fa fa-university fa-fw"></i> All Events'.html_safe, events_path, :id => 'all-events' %>
       </li>
       <li>
+      <%= link_to '<i class="fa fa-suitcase fa-fw"></i> My Events'.html_safe, my_events_path, :id => 'my-events' %>
+      </li>
+      <li>
         <%= link_to '<i class="fa fa-forward fa-fw"></i> Future Events'.html_safe, event_scope_path(:future), :id => 'future-events' %>
       </li>
       <li>
         <%= link_to '<i class="fa fa-backward fa-fw"></i> Past Events'.html_safe, event_scope_path(:past), :id => 'past-events' %>
-      </li>
-      <li>
-        <%= link_to '<i class="fa fa-suitcase fa-fw"></i> Your Events'.html_safe, my_events_path, :id => 'your-events' %>
       </li>
 
       <% if @event && @event.id %>
