--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -16,14 +16,28 @@
       <li>
         <%= link_to '<i class="fa fa-backward fa-fw"></i> Past Events'.html_safe, events_past_path, :id => 'past-events' %>
       </li>
+      <% unless Global.location.all.empty? %>
+      <li>
+        <a href="#"><i class="fa fa-globe fa-fw"></i> Event Locations <span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level">
+          <% Global.location.all.each do |location| %>
+          <li>
+            <%= link_to %Q(<i class="fa fa-location-arrow fa-fw"></i> #{location}).html_safe, events_location_path(location), :id => 'event-location' %>
+          </li>
+          <% end %>
+        </ul>
+        <!-- /.nav-second-level -->
+      </li>
+      <% end %>
+      <!-- /.unless Global.location.all.empty? -->
 
       <% if @event && @event.id %>
       <li class="spacer"></li>
       <li>
-        <a href="#"><i class="fa fa-sitemap fa-fw"></i> <%= @event.code %> <span class="fa arrow"></span></a>
+        <a href="#"><i class="fa fa-gears fa-fw"></i> <%= @event.code %> <span class="fa arrow"></span></a>
         <ul class="nav nav-second-level">
           <li>
-            <%= link_to '<i class="fa fa-barcode fa-fw"></i> Details'.html_safe, event_path(@event), :id => 'event-details' %>
+            <%= link_to '<i class="fa fa-book fa-fw"></i> Details'.html_safe, event_path(@event), :id => 'event-details' %>
           </li>
           <li>
             <%= link_to '<i class="fa fa-calendar fa-fw"></i> Schedule'.html_safe, event_schedule_index_path(@event), :id => 'event-schedule' %>
