--- a/app/views/welcome/organizers.html.erb
+++ b/app/views/welcome/organizers.html.erb
@@ -8,7 +8,7 @@
           If you can't see the button, click the workshop's name.</p>
         <p>There are also navigation links on the left side of the page (or in the menu on a small screen).</p>
         <p>This program is a work in progress. We hope that you enjoy using it, and
-          <a href="<%= Global.email.webmaster %>">welcome any feedback</a> you may have.</p>
+          <%= mail_to Global.email.webmaster, 'welcome any feedback' %> you may have.</p>
       </div>
       <!-- /.well -->
     </div>
