--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,41 +1,11 @@
-<% unless @memberships.blank? %>
+<article>
 <div class="row">
   <div class="col-md-12 your-workshops">
-    <h2>Your Workshops</h2>
+    <h2>Your Current & Upcoming Workshops</h2>
   </div>
 </div>
 <!-- /.row -->
-    
-<% @memberships.each do |m| %>
-<div class="row">
-  <div class="col-md-12">
-    <div class="panel panel-primary show">
-      <div class="panel-heading">
-        <h1 class="panel-title event-title"><%= m.event.name %><br />
-          <small><%= m.event.code + ' • ' + m.event.dates('long') %></small></h1>
-      </div>
-      <div class="panel-body">
-        <div class="row event-status">
-          <p>Your role: <em><%= m.role %></em>, Attendance: <em><%= m.attendance %></em></p>
-        </div>
-        <div class="row event-buttons">
-          <div class="btn-toolbar">
-            <div class="btn-group" role="group">
-              <%= link_to 'Event Details', event_path(m.event), class: 'btn btn-default' %>
-              <%= link_to 'Event Schedule', event_schedule_index_path(m.event), class: 'btn btn-default' %>
-              <%= link_to 'Event Participants', event_memberships_path(m.event), class: 'btn btn-default' %>
-            </div>
-          </div>
-          <!-- /.btn-toolbar -->
-        </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.panel-body -->
-    </div>
-    <!-- /.panel -->
-  </div>
-  <!-- /.col-md-12 -->
-</div>
-<% end %>
-<!-- /.row -->
-<% end %>
+
+<%= render partial: "membership", collection: @memberships %>
+
+</article>
