--- a/app/views/welcome/_membership.html.erb
+++ b/app/views/welcome/_membership.html.erb
@@ -12,9 +12,9 @@
         <div class="row event-buttons">
           <div class="btn-toolbar">
             <div class="btn-group" role="group">
-              <%= link_to 'Event Details', event_path(membership.event), class: 'btn btn-default' %>
-              <%= link_to 'Event Schedule', event_schedule_index_path(membership.event), class: 'btn btn-default' %>
-              <%= link_to 'Event Participants', event_memberships_path(membership.event), class: 'btn btn-default' %>
+              <%= link_to '<i class="fa fa-book fa-fw"></i> Details'.html_safe, event_path(membership.event), class: 'btn btn-default' %>
+              <%= link_to '<i class="fa fa-calendar fa-fw"></i> Schedule'.html_safe, event_schedule_index_path(membership.event), class: 'btn btn-default' %>
+              <%= link_to '<i class="fa fa-users fa-fw"></i> Participants'.html_safe, event_memberships_path(membership.event), :class => 'btn btn-default' %>
             </div>
           </div>
           <!-- /.btn-toolbar -->
