--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-footer">
-        Copyright &copy; <%= Time.now.year %> Banff International Research Station
+        <%= Global.config.footer %>
       </div>
     </div>
   </div>
