--- a/app/views/schedule/index.html.erb
+++ b/app/views/schedule/index.html.erb
@@ -24,7 +24,7 @@
             <!-- /.panel-heading -->
             <div class="panel-body panel-schedule">
               <div class="table-responsive">
-                <table class="table table-striped table-hover members-list">
+                <table class="table table-striped table-hover members-list container-fluid">
                   <tbody>
                   <%= render partial: 'schedule_index_items', locals: { day: day } %>
                   </tbody>
