--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -21,7 +21,7 @@
             <!-- /.panel-heading -->
             <div class="panel-body">
               <div class="table-responsive">
-                <table class="table table-striped table-hover members-list">
+                <table class="table table-striped table-hover members-list container-fluid">
                   <thead>
                   <tr>
                     <th>#</th>
