Better event description formatting

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -65,7 +65,7 @@
  <div id="event-description">
    <h5>Event Description:</h5>
    <div id="text">
-     <%= simple_format(get_description) %>
+     <%= get_description %>
    </div>
  </div>
 
