--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <article>
- <h3><%= @event.code %> Event Details</h3>
+ <h4 class="event-details">Event Details</h4>
 
  <div class="table-responsive">
    <table class="table table-condensed">
