--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require font-awesome
+ *= require bootstrap-select
  *= stub print
  *= require_tree .
  *= require_self
