--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -34,7 +34,7 @@
                     <% if @pending_invites && policy(@event).show_invite_buttons? %>
                         <th class="invites"></th>
                     <% end %>
-                    <th>Role</th>
+                    <th class="hidden-xs">Role</th>
                   </tr>
                   </thead>
                   <tbody>
