--- a/app/views/memberships/_member_index_items.html.erb
+++ b/app/views/memberships/_member_index_items.html.erb
@@ -1,5 +1,5 @@
 <% i=1 %>
-<% @event.attendance(status).each do |member| %>
+<% members.each do |member| %>
   <tr class="<%= member.role.delete(' ').downcase %>-row">
     <td><%= link_to i, event_membership_path(@event, member) %></td>
     <td class="rowlink-skip"><%= link_to "#{member.person.lname}", event_membership_path(@event, member) %></td>
