--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -11,7 +11,7 @@
 
   <!-- Membership Tables, one per type of attendance status -->
   <% @attendance.each do |status| %>
-    <% members = @memberships.select {|m| m.attendance == status} %>
+    <% members = @memberships.select {|m| m.attendance == status}.sort_by(&:role) %>
     <% if members.size > 0 && policy(@event).view_attendance_status?(status) %>
       <div class="row">
         <div class="col-lg-12">
