--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,5 +1,4 @@
 <article>
-
 <% if @memberships.blank? %>
   <div class="row">
       <div class="page-header">
@@ -8,11 +7,9 @@
       </div>
     </div>
 <% else %>
-
   <!-- Membership Tables, one per type of attendance status -->
-  <% @attendance.each do |status| %>
-    <% members = @memberships.select {|m| m.attendance == status}.sort_by {|m| [m.role, m.person.lastname]} %>
-    <% if members.size > 0 && policy(@event).view_attendance_status?(status) %>
+  <% @memberships.each do |status, members| %>
+    <% if policy(@event).view_attendance_status?(status) %>
       <div class="row">
         <div class="col-lg-12">
           <div class="panel panel-default">
@@ -58,5 +55,4 @@
     <% end %>
   <% end %>
 <% end %>
-
 </article>
