Cosmetic updates to membership view modal

--- a/app/assets/stylesheets/memberships.scss
+++ b/app/assets/stylesheets/memberships.scss
@@ -456,12 +456,15 @@
       width: 100%;
       background: $primary-color;
       color: #fff;
+      padding: 5px;
 
       .close {
         color: #fff;
       }
     }
-
+    .modal-footer {
+      padding: 0;
+    }
   }
 }
 
