--- a/app/views/memberships/_member_review_modal.html.erb
+++ b/app/views/memberships/_member_review_modal.html.erb
@@ -1,5 +1,5 @@
 <!-- Member Review Modal -->
-<div class="modal fade" id="member-review" tabindex="-1" aria-labelledby="memberReviewLabel" aria-hidden="true">
+<div class="modal" id="member-review" tabindex="-1" aria-labelledby="memberReviewLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="dialog">
     <div class="modal-content">
       <div id="member-form">
