--- a/app/views/memberships/_member_review_form.html.erb
+++ b/app/views/memberships/_member_review_form.html.erb
@@ -1,53 +1,53 @@
-<div class="modal-header d-flex mb-2">
-  <div class="p-2">
-    <h2 class="modal-title" id="memberReviewLabel">
-    <%= @event.code %>: <%= @person.name %>
+<div id="member-review" role="tooltip" tabindex="-1" aria-labelledby="memberReviewLabel" aria-hidden="true">
+  <div class="popover-header">
+    <button type="button" class="popover-close" id="x-close" aria-hidden="true">×</button>
+    <h2 id="memberReviewLabel">
+      <%= @event.code %>: <%= @person.name %>
     </h2>
   </div>
-  <div id="close-x" class="p-2 ml-auto"><button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button></div>
-</div>
-<div class="modal-body d-flex">
-  <div class="p-2 flex-fill left-content">
-    <p id="name"><%= @person.lastname %>, <%= @person.firstname %></p>
-    <p id="affil"><%= @person.affiliation %></p>
-    <% if policy(@membership).use_email_addresses? || policy(@membership).show_email_address? %>
-    <p id="email"><%= mail_to @person.email %></p>
-    <% end %>
-    <% unless @person.url.blank? %>
-    <p id="url"><%= link_to @person.uri.truncate(60), @person.uri %></p>
-    <% end %>
-    <p id="address"><strong>Address:</strong><br><%= print_address(@person) %></p>
-    <p id="billing"><strong>Billing:</strong><%= @membership.billing %></p>
-    <p id="reviewed"><strong>Reviewed:</strong><%= reviewed(@membership).html_safe %></p>
+  <div class="popover-body d-flex">
+    <div class="p-2 flex-fill left-content">
+      <p id="name"><%= @person.lastname %>, <%= @person.firstname %></p>
+      <p id="affil"><%= @person.affiliation %></p>
+      <% if policy(@membership).use_email_addresses? || policy(@membership).show_email_address? %>
+      <p id="email"><%= mail_to @person.email %></p>
+      <% end %>
+      <% unless @person.url.blank? %>
+      <p id="url"><%= link_to @person.uri.truncate(60), @person.uri %></p>
+      <% end %>
+      <p id="address"><strong>Address:</strong><br><%= print_address(@person) %></p>
+      <p id="billing"><strong>Billing:</strong><%= @membership.billing %></p>
+      <p id="reviewed"><strong>Reviewed:</strong><%= reviewed(@membership).html_safe %></p>
+    </div>
+    <div class="p-2 flex-fill right-content">
+      <p id="attendance"><strong>Attendance:</strong><%= @membership.attendance %></p>
+      <% unless @membership.replied_at.blank? %>
+        <p id="rsvp-date"><strong>RSVP date:</strong><br><%= @membership.rsvp_date %></p>
+      <% end %>
+      <p id="arrival"><strong>Arrives:</strong><%= @membership.arrives %></p>
+      <p id="departure"><strong>Departs:</strong><%= @membership.departs %></p>
+      <p id="guests"><strong>Guests:</strong><%= show_guests(@membership) %></p>
+      <% unless @membership.special_info.blank? %>
+        <p id="special-info">
+          <strong>Special info:</strong><%= simple_format(@membership.special_info) %>
+        </p>
+      <% end %>
+      <p id="notes"><strong>Notes:</strong><%= member_notes(@membership) %></p>
+    </div>
   </div>
-  <div class="p-2 flex-fill right-content">
-    <p id="attendance"><strong>Attendance:</strong><%= @membership.attendance %></p>
-    <% unless @membership.replied_at.blank? %>
-      <p id="rsvp-date"><strong>RSVP date:</strong><br><%= @membership.rsvp_date %></p>
-    <% end %>
-    <p id="arrival"><strong>Arrives:</strong><%= @membership.arrives %></p>
-    <p id="departure"><strong>Departs:</strong><%= @membership.departs %></p>
-    <p id="guests"><strong>Guests:</strong><%= show_guests(@membership) %></p>
-    <% unless @membership.special_info.blank? %>
-      <p id="special-info">
-        <strong>Special info:</strong><%= simple_format(@membership.special_info) %>
-      </p>
-    <% end %>
-    <p id="notes"><strong>Notes:</strong><%= member_notes(@membership) %></p>
+  <div class="d-flex flex-row-reverse updated-by">
+    Last updated by: <%= @membership.updated_by %> on <%= @membership.updated_at.in_time_zone(@membership.event.time_zone) %>
   </div>
-</div>
-<div class="d-flex flex-row-reverse updated-by">
-  Last updated by: <%= @membership.updated_by %> on <%= @membership.updated_at.in_time_zone(@membership.event.time_zone) %>
-</div>
-<div class="modal-footer d-flex mb-1">
-  <span class="left-buttons p-2 mr-auto">
-  <%= link_to "Profile", event_membership_path(@event, @membership),
-        class: "btn btn-secondary" %>
-  <%= link_to "Edit", edit_event_membership_path(@event, @membership),
-        class: "btn btn-secondary" %>
-    <button type="button" class="btn btn-primary">Update</button>
-  </span>
-  <span class="right-buttons p-2 ml-auto">
-    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-  </span>
+  <div class="popover-footer d-flex mb-1">
+    <span class="left-buttons p-2 mr-auto">
+    <%= link_to "Profile", event_membership_path(@event, @membership),
+          class: "btn btn-secondary" %>
+    <%= link_to "Edit", edit_event_membership_path(@event, @membership),
+          class: "btn btn-secondary" %>
+      <button type="button" class="btn btn-primary">Update</button>
+    </span>
+    <span class="right-buttons p-2 ml-auto">
+      <button type="button" class="btn btn-primary popover-close">Close</button>
+    </span>
+  </div>
 </div>
