--- a/app/views/memberships/member_review.js.erb
+++ b/app/views/memberships/member_review.js.erb
@@ -1,8 +1,15 @@
 $(".popovers").popover('hide');
+
+function setWidth({instance: {reference, popper}}) {
+  // box-sizing: border-box
+  popper.style.width = `${reference.offsetWidth}px`;
+}
+
 $("#popover-<%= @membership.id %>").popover({
     placement: "right",
     trigger: "click focus",
     html: true,
+    container: 'article',
     content: "<%= escape_javascript(render 'member_review_form').html_safe %>"
   })
 $("#popover-<%= @membership.id %>").popover('show');
